изменил код первой лабы

--- a/oop/lab_01/CMakeLists.txt
+++ b/oop/lab_01/CMakeLists.txt
@@ -1,6 +1,6 @@
 ﻿cmake_minimum_required(VERSION 3.5)
 
-project(3d_viewer_lab1 VERSION 0.1 LANGUAGES CXX)
+project(lab_01 VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -35,7 +35,7 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(3d_viewer_lab1
+    qt_add_executable(lab_01
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
@@ -45,21 +45,21 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(3d_viewer_lab1 SHARED
+        add_library(lab_01 SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(3d_viewer_lab1
+        add_executable(lab_01
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(3d_viewer_lab1 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(lab_01 PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-set_target_properties(3d_viewer_lab1 PROPERTIES
+set_target_properties(lab_01 PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -67,10 +67,10 @@ set_target_properties(3d_viewer_lab1 PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS 3d_viewer_lab1
+install(TARGETS lab_01
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(3d_viewer_lab1)
+    qt_finalize_executable(lab_01)
 endif()
